// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 jArhLO"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a danger color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 gdfOoU"
    color="danger"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a hint color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 ijaTzd"
    color="hint"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a info color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 fRMwat"
    color="info"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a success color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 jArhLO"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a warning color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 fzvlET"
    color="warning"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render thick variant 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 bTXaWG"
    color="success"
    type="checkbox"
  />
</div>
`;
